# smarthome_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml
cmake/: Findcrowcpp.cmake  Findmodernsqlite.cmake  Findsimpleble.cmake  Findyamlcpp.cmake
include/: BLEConfig.hpp  BLEException.hpp  BLEManager.hpp  ConfigHandler.hpp  CrowServer.hpp  DataHandler.hpp  DataHandlerException.hpp  utils.hpp
src/: BLEManager.cpp  ConfigHandler.cpp  CrowServer.cpp  DataHandler.cpp  main.cpp  utils.cpp
